tests/integration/snapshots/integration__completion__bibtex__command_incomplete_entry.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 1, 18)?"

---
{
  "isIncomplete": true,
  "items": [
    {
      "label": "LaTeX",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "00",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "LaTeX"
      }
    },
    {
      "label": "LaTeXe",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "01",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "LaTeXe"
      }
    },
    {
      "label": "latexreleaseversion",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "02",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "latexreleaseversion"
      }
    },
    {
      "label": "LastDeclaredEncoding",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "03",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "LastDeclaredEncoding"
      }
    },
    {
      "label": "last",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "04",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "last"
      }
    },
    {
      "label": "lastbox",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "05",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "lastbox"
      }
    },
    {
      "label": "lastkern",
      "kind": 1,
      "detail": "built-in",
      "preselect": false,
      "sortText": "06",
      "textEdit": {
        "range": {
          "start": {
            "line": 1,
            "character": 15
          },
          "end": {
            "line": 1,
            "character": 18
          }
        },
        "newText": "lastkern"
      }
    }
  ]
}
