tests/integration/snapshots/integration__completion__bibtex__empty_document.snap
---
source: tests/integration/completion.rs
expression: "complete_and_resolve(&server, uri, 0, 0)?"

---
{
  "isIncomplete": false,
  "items": []
}
